manifests/policy-reporter/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: policy-reporter
  namespace: security
spec:
  hostnames:
    - policy-reporter.home.lex.la
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: cilium-gateway-internal
      namespace: kube-system
      sectionName: https-home-lex-la
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: policy-reporter-ui
          port: 8080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
status:
  parents:
    - conditions:
        - lastTransitionTime: "2025-10-23T21:38:30Z"
          message: Accepted HTTPRoute
          observedGeneration: 1
          reason: Accepted
          status: "True"
          type: Accepted
        - lastTransitionTime: "2025-10-23T21:38:30Z"
          message: Service reference is valid
          observedGeneration: 1
          reason: ResolvedRefs
          status: "True"
          type: ResolvedRefs
      controllerName: io.cilium/gateway-controller
      parentRef:
        group: gateway.networking.k8s.io
        kind: Gateway
        name: cilium-gateway-internal
        namespace: kube-system
        sectionName: https-home-lex-la
